[project]
version = ""
description = "riscv amaranth/rust build testing"
authors = [
    {name = "Simon Kirkby", email = "obeygiantrobot@gmail.com"},
]

name = "patina-build"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth",
    "amaranth_soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "amaranth_stdio @ git+https://github.com/amaranth-lang/amaranth-stdio",
    "hapenny @ git+https://github.com/cbiffle/hapenny",
    "minerva @ git+https://github.com/minerva-cpu/minerva",
    "yowasp-yosys",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
