[project]
version = ""
description = "riscv amaranth/rust build testing"
authors = [
    {name = "Simon Kirkby", email = "obeygiantrobot@gmail.com"},
]

name = "patina-build"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth",
    "amaranth_soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "amaranth_stdio @ git+https://github.com/amaranth-lang/amaranth-stdio",
    "yowasp-yosys",
    "rich>=13.7.0",
    # "hapenny @ git+https://github.com/zignig/hapenny@qol",
    "yowasp-nextpnr-ice40",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
tiny = { cmd = "./tinybxtest.py -vv" }
prog = { cmd = "./tinybxtest.py -b" }
gen = { cmd = "./tinybxtest.py -g" }

[tool.pdm.dev-dependencies]
dev = [
    "-e hapenny @ file:///opt/hapenny",
]
