[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
serial-monitor = "0.0.7"
anyhow = "1.0.71"
indicatif = "0.17.5"
parse_int = "0.6.0"