[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
anyhow = "1.0.71"
indicatif = "0.17.5"
parse_int = "0.6.0"
tokio-serial = { version = "5.4.4", features = ["bytes"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
