[package]
name = "rustv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#riscv-rt = { version = "0.11.0" }
cfg-if = "1.0.0"
heapless = { version = "0.8.0" }
ufmt = { version = "0.2.0", default-features = true }

[profile.dev]
panic = "abort"
# strip = "symbols" 

[profile.release]
panic = "abort"
# strip = true
opt-level = 's'
debug = true
# mir-opt-level = 0

[build-dependencies]
#riscv-target = "0.1.2"
parse_int = "0.6.0"
askama = "0.12.1"
