[package]
name = "rustv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
heapless = { version = "0.8.0" }
ufmt = { version = "0.2.0", default-features = true }

[profile.dev]
panic = "abort"
# strip = "symbols" 

[profile.release]
panic = "abort"
opt-level = 'z'
debug = false
test = false

[build-dependencies]
#riscv-target = "0.1.2"
parse_int = "0.6.0"
askama = "0.12.1"

[[bin]]
name = "mini"
test = false
