[package]
name = "hapenny-montool"
version = "1.0.0"
edition = "2021"
license = "MPL-2"

[dependencies]
anyhow = "1.0.71"
bytes = "1.5.0"
clap = { version = "4.3.4", features = ["derive", "wrap_help"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.2"
indicatif = "0.17.5"
parse_int = "0.6.0"
serialport = "4.2.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serial = "5.4.4"
